code/microservices/k8s/files/production-plan-calculator-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: production-plan-calculator-deploy
  namespace: powerplantcodingchallenge
spec:
  replicas: 1
  selector:
    matchLabels:
      app: production-plan-calculator
  template:
    metadata:
      labels:
        app: production-plan-calculator
      annotations:
        dapr.io/enabled: "true"
        dapr.io/app-id: "production-plan-calculator"
        dapr.io/app-port: "80"
        dapr.io/enable-api-logging: "true"  
    spec:
      containers:
        - name: production-plan-calculator
          image: matheus06/productionplancalculator:latest
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: pppc-app-production-plan-calculator
  namespace: powerplantcodingchallenge
spec:
  type: ClusterIP
  selector:
    app: production-plan-calculator
  ports:
  - name: production-plan-calculator
    protocol: TCP
    port: 80
    targetPort: 80
