code/microservices/k8s/files/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ppcc-ingress-service
  namespace: powerplantcodingchallenge
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "4"
spec:
    ingressClassName: nginx
    tls:
    - hosts:
      - localdev-tls.me
      secretName: ingress-cert
    rules:
     - host: localdev-tls.me
       http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: pppc-app-power-calculation
              port:
                number: 80
